@startuml nanoKON2-Setup

title クラス図

namespace W0NYV {

    namespace nanoKON2 {

        class NanoKON2Handler {
            - _input : PlayerInput
        }
        note bottom: Input SystemからのMIDIを受け取り、イベント発火

        class NanoKON2Model {
            + model : Model
            + guiModel : Model
        }

        class NanoKON2Presenter {
            - _sliders : List<Slider>
            - _knobs : List<Knob>
            - _buttons : List<Button>

        }
        note bottom: 結び付けくん

        class NanoKON2EventSubscriber {
            - _subscribeObjects : List<SubscribeObject>
        }

        class Model {
            + sliderValueList : ReactiveCollection
        }

        class SliderCustom {
            + value : ReactiveProperty<float>
            + hasTouched : ReactiveProperty<bool>
        }

        class Knob {
            + value : ReactiveProperty<float>
            + hasTouched : ReactiveProperty<bool>
        }

        class Button {
            + value : ReactiveProperty<float>
            + hasTouched : ReactiveProperty<bool>
        }

        Model <-- NanoKON2Model 

        NanoKON2Model <-- NanoKON2Handler
        NanoKON2Model <- NanoKON2Presenter
        NanoKON2Model <-- NanoKON2EventSubscriber

        SliderCustom <-- NanoKON2Presenter
        Knob <-- NanoKON2Presenter
        Button <-- NanoKON2Presenter

    }

    class HogeHoge{}
    note bottom: 最終的にMIDIの値を受け取るクラス

    HogeHoge <-- W0NYV.nanoKON2.NanoKON2EventSubscriber

}

@enduml